# camera-inference-rtsp-ros

./: README.md  build-all.sh  compose.yml  docker-compose.yml
_run_/: README.md
_run_/compose/: compose.yml
_run_/quadlets/: camera-inference.network  ros2-inference.container  ros2-rosbridge.container
camera-gateway-rtsp/: README.md  build.sh
camera-gateway-rtsp/src/: Containerfile  entrypoint.sh  mediamtx.yml  stream.py
image-inference-viewer/: README.md  build.sh
image-inference-viewer/src/: Containerfile  index.html  nginx.conf
ros2-broker/: README.md
ros2-broker-watch/: README.md
ros2-broker-watch/src/: Containerfile  entrypoint.sh
ros2-broker-watch/src/ros2_pkg/: package.xml  setup.cfg
ros2-broker/src/: Containerfile
ros2-broker/src/ros2_pkg/: package.xml  (+1 more)
ros2-fedora-base/: README.md
ros2-fedora-base copy/: README.md
ros2-fedora-base copy/src/: Containerfile  fastdds.xml
ros2-fedora-base/src/: Containerfile  fastdds.xml
ros2-image-streamer/: README.md
ros2-image-streamer/src/: Containerfile  entrypoint.sh  mediamtx.yml
ros2-image-streamer/src/ros2_pkg/: package.xml  setup.cfg  setup.py
ros2-image-streamer/src/ros2_pkg/image_streamer/: image_streamer_node.py
ros2-inference/: README.md  build.sh
ros2-inference/src/: Containerfile  entrypoint.sh
ros2-rosbridge/: README.md  build.sh
ros2-rosbridge/src/: Containerfile  entrypoint.sh
ros2-rtsp-bridge/: README.md
ros2-rtsp-bridge/src/: Containerfile
run/: README.md
run/quadlets/: camera-gateway-rtsp.container  image-inference-viewer.container  ros2-inference.container
(+10 files in other folders)
